// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Maze component render without props 1`] = `
<DocumentFragment>
  <div
    class="styles__TitleContainer-sc-16jy8ol-0 epXWgE"
  >
    <h1
      class="styles__H1Element-sc-16jy8ol-1 exeysa"
    />
  </div>
</DocumentFragment>
`;

exports[`Maze should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styles__TitleContainer-sc-16jy8ol-0 epXWgE"
  >
    <h1
      class="styles__H1Element-sc-16jy8ol-1 exeysa"
    >
      Maze Game
    </h1>
  </div>
</DocumentFragment>
`;
